fix: don't stretch section to screen height

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
 
 @layer base {
   section {
-    @apply flex w-full flex-col items-center lg:min-h-svh;
+    @apply flex w-full flex-col items-center;
   }
 
   footer > div,
